Calcula la media

--- a/calculate_stuff.ipynb
+++ b/calculate_stuff.ipynb
@@ -214,13 +214,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "max: 7001, min: 1401\n"
+      "max: 7001, min: 1401, mean: 2167.347971441523\n"
      ]
     }
    ],
@@ -231,14 +231,15 @@
     "    b4 = src.read(1)\n",
     "    max = np.amax(b4)\n",
     "    min = np.amin(b4[np.nonzero(b4)])\n",
+    "    mean = np.mean(b4[np.nonzero(b4)])\n",
     "\n",
-    "    print(f\"max: {max}, min: {min}\")\n"
+    "    print(f\"max: {max}, min: {min}, mean: {mean}\")\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-17T18:21:50.841691Z",
-     "end_time": "2023-04-17T18:21:50.853988Z"
+     "start_time": "2023-04-17T18:43:02.119448Z",
+     "end_time": "2023-04-17T18:43:02.127013Z"
     }
    }
   },
