Calcula temperatura a partir del raster de LTS

--- a/calculate_stuff.ipynb
+++ b/calculate_stuff.ipynb
@@ -14,7 +14,7 @@
     "import numpy as np\n",
     "from sentinelsat import SentinelAPI\n",
     "\n",
-    "api = SentinelAPI('michogar', 'tvsptqzKuUULb87L')"
+    "api = SentinelAPI('', '')"
    ]
   },
   {
