--- a/calcular_ndvi.ipynb
+++ b/calcular_ndvi.ipynb
@@ -5,8 +5,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-06T23:16:41.064919Z",
-     "start_time": "2023-05-06T23:16:40.977638Z"
+     "end_time": "2023-05-25T10:32:55.291792Z",
+     "start_time": "2023-05-25T10:32:55.035069Z"
     }
    },
    "outputs": [],
@@ -26,7 +26,7 @@
     "\n",
     "project = pyproj.Transformer.from_crs(wgs84, utm, always_xy=True).transform\n",
     "\n",
-    "with fiona.open(\"larioja/capellan.geojson\", \"r\") as bbox_geojson:\n",
+    "with fiona.open(\"larioja/anguiano.geojson\", \"r\") as bbox_geojson:\n",
     "    shapes = [transform(project, shape(feature[\"geometry\"])) for feature in bbox_geojson]\n",
     "\n",
     "print(shapes[0].wkt)\n",
@@ -35,7 +35,7 @@
     "# B4\t10 m\t665 nm\tRed\n",
     "# B8\t10 m\t842 nm\tVisible and Near Infrared (VNIR)\n",
     "\n",
-    "bands = './after/bands'\n",
+    "bands = './before/bands'\n",
     "\n",
     "def create_mask(image: str):\n",
     "\n",
