--- a/download_sentinel.ipynb
+++ b/download_sentinel.ipynb
@@ -5,8 +5,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-19T16:52:06.773753Z",
-     "start_time": "2023-04-19T16:52:06.653163Z"
+     "end_time": "2023-05-23T10:32:52.550247Z",
+     "start_time": "2023-05-23T10:32:52.402810Z"
     }
    },
    "outputs": [],
@@ -33,15 +33,15 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-06T22:12:17.501460Z",
-     "start_time": "2023-05-06T22:12:16.255830Z"
+     "end_time": "2023-05-23T10:32:58.184726Z",
+     "start_time": "2023-05-23T10:32:54.785020Z"
     }
    },
    "outputs": [],
    "source": [
     "from sentinelsat import read_geojson, geojson_to_wkt\n",
     "\n",
-    "footprint = geojson_to_wkt(read_geojson('larioja/bloque1_extension.geojson'))\n",
+    "footprint = geojson_to_wkt(read_geojson('larioja/anguiano.geojson'))\n",
     "\n",
     "\n",
     "products_before = api.query(footprint,\n",
@@ -58,7 +58,7 @@
     "products_after = api.query(footprint,\n",
     "                     date=('20220731', '20220831'),\n",
     "                     platformname='Sentinel-2',\n",
-    "                     cloudcoverpercentage=0)\n",
+    "                     cloudcoverpercentage=(0, 20))\n",
     "products_after_df = api.to_geodataframe(products_after)\n",
     "products_after_df.to_file(\"products_after.gpkg\", layer='footprints', driver=\"GPKG\")\n"
    ]
@@ -94,13 +94,13 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-06T22:52:48.726151Z",
-     "start_time": "2023-05-06T22:12:25.261437Z"
+     "end_time": "2023-05-24T12:33:15.169689Z",
+     "start_time": "2023-05-24T09:58:34.266258Z"
     }
    },
    "outputs": [],
    "source": [
-    "api.download_all(products_after, '.')"
+    "api.download_all(products_before, './raw/before ')"
    ]
   },
   {
